src/actors/snapshots/symbolicator__actors__symbolication__tests__wasm_payload.snap
---
source: src/actors/symbolication.rs
expression: response
---
status: completed
stacktraces:
  - frames:
      - status: symbolicated
        original_index: 0
        addr_mode: "rel:0"
        instruction_addr: 0x8c
        lang: rust
        symbol: internal_func
        sym_addr: 0x8b
        function: internal_func
        filename: src/lib.rs
        abs_path: /Users/mitsuhiko/Development/wasm-example/simple/src/lib.rs
        lineno: 19
modules:
  - debug_status: found
    features:
      has_debug_info: true
      has_unwind_info: false
      has_symbols: true
      has_sources: false
    arch: wasm32
    type: wasm
    code_id: bda18fd85d4a4eb893022d6bfad846b1
    debug_id: bda18fd8-5d4a-4eb8-9302-2d6bfad846b1
    debug_file: "file://foo.invalid/demo.wasm"
    image_addr: 0x0
